// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContentfulStore store should load 1`] = `
Array [
  Object {
    "__id": "foo",
    "__typename": "Widget",
    "child": Object {
      "__id": "bar",
      "__typename": "Widget",
      "child": Object {
        "__id": "baz",
        "__typename": "Widget",
        "child": Object {
          "__id": "qux",
          "__typename": "Widget",
          "child": [Circular],
          "image": Object {
            "__id": "bargis",
            "__typename": "Asset",
            "file": Object {
              "contentType": "image/jpeg",
              "details": Object {
                "image": Object {
                  "height": 2828,
                  "width": 4242,
                },
                "size": 3996687,
              },
              "fileName": "bargis.jpg",
              "url": "//images.ctfassets.net/abc/bargis/456/bargis.jpg",
            },
            "title": "Bargis",
          },
          "name": "Qux",
        },
        "image": Object {
          "__id": "bargis",
          "__typename": "Asset",
          "file": Object {
            "contentType": "image/jpeg",
            "details": Object {
              "image": Object {
                "height": 2828,
                "width": 4242,
              },
              "size": 3996687,
            },
            "fileName": "bargis.jpg",
            "url": "//images.ctfassets.net/abc/bargis/456/bargis.jpg",
          },
          "title": "Bargis",
        },
        "name": "Baz",
      },
      "image": Object {
        "__id": "padasjoki",
        "__typename": "Asset",
        "file": Object {
          "contentType": "image/jpeg",
          "details": Object {
            "image": Object {
              "height": 3000,
              "width": 4000,
            },
            "size": 5080466,
          },
          "fileName": "padasjoki.jpg",
          "url": "//images.ctfassets.net/abc/padasjoki/123/padasjoki.jpg",
        },
        "title": "padasjoki",
      },
      "name": "Bar",
      "relatives": Array [
        [Circular],
      ],
    },
    "description": "An English Foo",
    "image": Object {
      "__id": "bargis",
      "__typename": "Asset",
      "file": Object {
        "contentType": "image/jpeg",
        "details": Object {
          "image": Object {
            "height": 2828,
            "width": 4242,
          },
          "size": 3996687,
        },
        "fileName": "bargis.jpg",
        "url": "//images.ctfassets.net/abc/bargis/456/bargis.jpg",
      },
      "title": "Bargis",
    },
    "images": Array [
      Object {
        "__id": "bargis",
        "__typename": "Asset",
        "file": Object {
          "contentType": "image/jpeg",
          "details": Object {
            "image": Object {
              "height": 2828,
              "width": 4242,
            },
            "size": 3996687,
          },
          "fileName": "bargis.jpg",
          "url": "//images.ctfassets.net/abc/bargis/456/bargis.jpg",
        },
        "title": "Bargis",
      },
      Object {
        "__id": "padasjoki",
        "__typename": "Asset",
        "file": Object {
          "contentType": "image/jpeg",
          "details": Object {
            "image": Object {
              "height": 3000,
              "width": 4000,
            },
            "size": 5080466,
          },
          "fileName": "padasjoki.jpg",
          "url": "//images.ctfassets.net/abc/padasjoki/123/padasjoki.jpg",
        },
        "title": "padasjoki",
      },
    ],
    "name": "Foo",
    "relatives": Array [
      Object {
        "__id": "baz",
        "__typename": "Widget",
        "child": Object {
          "__id": "qux",
          "__typename": "Widget",
          "child": [Circular],
          "image": Object {
            "__id": "bargis",
            "__typename": "Asset",
            "file": Object {
              "contentType": "image/jpeg",
              "details": Object {
                "image": Object {
                  "height": 2828,
                  "width": 4242,
                },
                "size": 3996687,
              },
              "fileName": "bargis.jpg",
              "url": "//images.ctfassets.net/abc/bargis/456/bargis.jpg",
            },
            "title": "Bargis",
          },
          "name": "Qux",
        },
        "image": Object {
          "__id": "bargis",
          "__typename": "Asset",
          "file": Object {
            "contentType": "image/jpeg",
            "details": Object {
              "image": Object {
                "height": 2828,
                "width": 4242,
              },
              "size": 3996687,
            },
            "fileName": "bargis.jpg",
            "url": "//images.ctfassets.net/abc/bargis/456/bargis.jpg",
          },
          "title": "Bargis",
        },
        "name": "Baz",
      },
      Object {
        "__id": "qux",
        "__typename": "Widget",
        "child": [Circular],
        "image": Object {
          "__id": "bargis",
          "__typename": "Asset",
          "file": Object {
            "contentType": "image/jpeg",
            "details": Object {
              "image": Object {
                "height": 2828,
                "width": 4242,
              },
              "size": 3996687,
            },
            "fileName": "bargis.jpg",
            "url": "//images.ctfassets.net/abc/bargis/456/bargis.jpg",
          },
          "title": "Bargis",
        },
        "name": "Qux",
      },
    ],
  },
  Object {
    "__id": "bar",
    "__typename": "Widget",
    "child": Object {
      "__id": "baz",
      "__typename": "Widget",
      "child": Object {
        "__id": "qux",
        "__typename": "Widget",
        "child": [Circular],
        "image": Object {
          "__id": "bargis",
          "__typename": "Asset",
          "file": Object {
            "contentType": "image/jpeg",
            "details": Object {
              "image": Object {
                "height": 2828,
                "width": 4242,
              },
              "size": 3996687,
            },
            "fileName": "bargis.jpg",
            "url": "//images.ctfassets.net/abc/bargis/456/bargis.jpg",
          },
          "title": "Bargis",
        },
        "name": "Qux",
      },
      "image": Object {
        "__id": "bargis",
        "__typename": "Asset",
        "file": Object {
          "contentType": "image/jpeg",
          "details": Object {
            "image": Object {
              "height": 2828,
              "width": 4242,
            },
            "size": 3996687,
          },
          "fileName": "bargis.jpg",
          "url": "//images.ctfassets.net/abc/bargis/456/bargis.jpg",
        },
        "title": "Bargis",
      },
      "name": "Baz",
    },
    "image": Object {
      "__id": "padasjoki",
      "__typename": "Asset",
      "file": Object {
        "contentType": "image/jpeg",
        "details": Object {
          "image": Object {
            "height": 3000,
            "width": 4000,
          },
          "size": 5080466,
        },
        "fileName": "padasjoki.jpg",
        "url": "//images.ctfassets.net/abc/padasjoki/123/padasjoki.jpg",
      },
      "title": "padasjoki",
    },
    "name": "Bar",
    "relatives": Array [
      Object {
        "__id": "foo",
        "__typename": "Widget",
        "child": [Circular],
        "description": "An English Foo",
        "image": Object {
          "__id": "bargis",
          "__typename": "Asset",
          "file": Object {
            "contentType": "image/jpeg",
            "details": Object {
              "image": Object {
                "height": 2828,
                "width": 4242,
              },
              "size": 3996687,
            },
            "fileName": "bargis.jpg",
            "url": "//images.ctfassets.net/abc/bargis/456/bargis.jpg",
          },
          "title": "Bargis",
        },
        "images": Array [
          Object {
            "__id": "bargis",
            "__typename": "Asset",
            "file": Object {
              "contentType": "image/jpeg",
              "details": Object {
                "image": Object {
                  "height": 2828,
                  "width": 4242,
                },
                "size": 3996687,
              },
              "fileName": "bargis.jpg",
              "url": "//images.ctfassets.net/abc/bargis/456/bargis.jpg",
            },
            "title": "Bargis",
          },
          Object {
            "__id": "padasjoki",
            "__typename": "Asset",
            "file": Object {
              "contentType": "image/jpeg",
              "details": Object {
                "image": Object {
                  "height": 3000,
                  "width": 4000,
                },
                "size": 5080466,
              },
              "fileName": "padasjoki.jpg",
              "url": "//images.ctfassets.net/abc/padasjoki/123/padasjoki.jpg",
            },
            "title": "padasjoki",
          },
        ],
        "name": "Foo",
        "relatives": Array [
          Object {
            "__id": "baz",
            "__typename": "Widget",
            "child": Object {
              "__id": "qux",
              "__typename": "Widget",
              "child": [Circular],
              "image": Object {
                "__id": "bargis",
                "__typename": "Asset",
                "file": Object {
                  "contentType": "image/jpeg",
                  "details": Object {
                    "image": Object {
                      "height": 2828,
                      "width": 4242,
                    },
                    "size": 3996687,
                  },
                  "fileName": "bargis.jpg",
                  "url": "//images.ctfassets.net/abc/bargis/456/bargis.jpg",
                },
                "title": "Bargis",
              },
              "name": "Qux",
            },
            "image": Object {
              "__id": "bargis",
              "__typename": "Asset",
              "file": Object {
                "contentType": "image/jpeg",
                "details": Object {
                  "image": Object {
                    "height": 2828,
                    "width": 4242,
                  },
                  "size": 3996687,
                },
                "fileName": "bargis.jpg",
                "url": "//images.ctfassets.net/abc/bargis/456/bargis.jpg",
              },
              "title": "Bargis",
            },
            "name": "Baz",
          },
          Object {
            "__id": "qux",
            "__typename": "Widget",
            "child": [Circular],
            "image": Object {
              "__id": "bargis",
              "__typename": "Asset",
              "file": Object {
                "contentType": "image/jpeg",
                "details": Object {
                  "image": Object {
                    "height": 2828,
                    "width": 4242,
                  },
                  "size": 3996687,
                },
                "fileName": "bargis.jpg",
                "url": "//images.ctfassets.net/abc/bargis/456/bargis.jpg",
              },
              "title": "Bargis",
            },
            "name": "Qux",
          },
        ],
      },
    ],
  },
  Object {
    "__id": "baz",
    "__typename": "Widget",
    "child": Object {
      "__id": "qux",
      "__typename": "Widget",
      "child": [Circular],
      "image": Object {
        "__id": "bargis",
        "__typename": "Asset",
        "file": Object {
          "contentType": "image/jpeg",
          "details": Object {
            "image": Object {
              "height": 2828,
              "width": 4242,
            },
            "size": 3996687,
          },
          "fileName": "bargis.jpg",
          "url": "//images.ctfassets.net/abc/bargis/456/bargis.jpg",
        },
        "title": "Bargis",
      },
      "name": "Qux",
    },
    "image": Object {
      "__id": "bargis",
      "__typename": "Asset",
      "file": Object {
        "contentType": "image/jpeg",
        "details": Object {
          "image": Object {
            "height": 2828,
            "width": 4242,
          },
          "size": 3996687,
        },
        "fileName": "bargis.jpg",
        "url": "//images.ctfassets.net/abc/bargis/456/bargis.jpg",
      },
      "title": "Bargis",
    },
    "name": "Baz",
  },
  Object {
    "__id": "qux",
    "__typename": "Widget",
    "child": [Circular],
    "image": Object {
      "__id": "bargis",
      "__typename": "Asset",
      "file": Object {
        "contentType": "image/jpeg",
        "details": Object {
          "image": Object {
            "height": 2828,
            "width": 4242,
          },
          "size": 3996687,
        },
        "fileName": "bargis.jpg",
        "url": "//images.ctfassets.net/abc/bargis/456/bargis.jpg",
      },
      "title": "Bargis",
    },
    "name": "Qux",
  },
  Object {
    "__id": "doodah",
    "__typename": "Gadget",
    "name": "Doodah",
  },
]
`;

exports[`ContentfulStore store should load 2`] = `
Array [
  Object {
    "__id": "bargis",
    "__typename": "Asset",
    "file": Object {
      "contentType": "image/jpeg",
      "details": Object {
        "image": Object {
          "height": 2828,
          "width": 4242,
        },
        "size": 3996687,
      },
      "fileName": "bargis.jpg",
      "url": "//images.ctfassets.net/abc/bargis/456/bargis.jpg",
    },
    "title": "Bargis",
  },
  Object {
    "__id": "padasjoki",
    "__typename": "Asset",
    "file": Object {
      "contentType": "image/jpeg",
      "details": Object {
        "image": Object {
          "height": 3000,
          "width": 4000,
        },
        "size": 5080466,
      },
      "fileName": "padasjoki.jpg",
      "url": "//images.ctfassets.net/abc/padasjoki/123/padasjoki.jpg",
    },
    "title": "padasjoki",
  },
]
`;

exports[`ContentfulStore store should sync 1`] = `
Array [
  Object {
    "__id": "foo",
    "__typename": "Widget",
    "child": Object {
      "__id": "qux",
      "__typename": "Widget",
      "child": [Circular],
      "image": undefined,
      "name": "Qux",
    },
    "description": "An updated Foo",
    "images": Array [
      Object {
        "__id": "padasjoki",
        "__typename": "Asset",
        "file": Object {
          "contentType": "image/jpeg",
          "details": Object {
            "image": Object {
              "height": 3000,
              "width": 4000,
            },
            "size": 5080466,
          },
          "fileName": "padasjoki.jpg",
          "url": "//images.ctfassets.net/abc/padasjoki/789/padasjoki.jpg",
        },
        "title": "Padasjoki Updated",
      },
    ],
    "name": "Foo",
    "relatives": Array [
      Object {
        "__id": "baz",
        "__typename": "Widget",
        "child": Object {
          "__id": "qux",
          "__typename": "Widget",
          "child": [Circular],
          "image": undefined,
          "name": "Qux",
        },
        "image": undefined,
        "name": "Baz",
      },
      Object {
        "__id": "qux",
        "__typename": "Widget",
        "child": [Circular],
        "image": undefined,
        "name": "Qux",
      },
    ],
  },
  Object {
    "__id": "baz",
    "__typename": "Widget",
    "child": Object {
      "__id": "qux",
      "__typename": "Widget",
      "child": [Circular],
      "image": undefined,
      "name": "Qux",
    },
    "image": undefined,
    "name": "Baz",
  },
  Object {
    "__id": "qux",
    "__typename": "Widget",
    "child": [Circular],
    "image": undefined,
    "name": "Qux",
  },
  Object {
    "__id": "doodah",
    "__typename": "Gadget",
    "name": "Doodah",
  },
]
`;

exports[`ContentfulStore store should sync 2`] = `
Array [
  Object {
    "__id": "padasjoki",
    "__typename": "Asset",
    "file": Object {
      "contentType": "image/jpeg",
      "details": Object {
        "image": Object {
          "height": 3000,
          "width": 4000,
        },
        "size": 5080466,
      },
      "fileName": "padasjoki.jpg",
      "url": "//images.ctfassets.net/abc/padasjoki/789/padasjoki.jpg",
    },
    "title": "Padasjoki Updated",
  },
]
`;
